--- a/package.json
+++ b/package.json
@@ -4,12 +4,17 @@
   "description": "The idea is to create a platform for pickup lines, whether you're single and ready to mingle or already in a relationship and looking to add some spice. \r Users can browse through a curated collection of pickup lines ranging from flirty to silly, guaranteed to make anyone smile. The platform is to be made with the intention of bringing joy and laughter to readers. The focus is on embracing the sheer ridiculousness of pickup lines and turning them into a source of amusement and playful banter.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev":"nodemon server.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "axios": "^1.6.7"
+    "axios": "^1.6.7",
+    "express": "^4.18.3"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.0"
   }
 }
