--- a/Server/.env
+++ b/Server/.env
@@ -1,1 +1,1 @@
-MONGODB_URI = 'mongodb+srv://jatinjayadev:jatin2006@cluster0.psaqtmq.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0'
+MONGODB_URI = 'mongodb+srv://jatinjayadev:jatin2006@cluster0.psaqtmq.mongodb.net/PickupLines?retryWrites=true&w=majority&appName=Cluster0'
