--- a/Server/package.json
+++ b/Server/package.json
@@ -15,6 +15,7 @@
     "axios": "^1.6.7",
     "cors": "^2.8.5",
     "express": "^4.18.3",
+    "joi": "^17.12.3",
     "mongoose": "^8.2.1"
   },
   "devDependencies": {
