--- a/Server/package.json
+++ b/Server/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "axios": "^1.6.7",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "express": "^4.18.3",
     "joi": "^17.12.3",
     "mongoose": "^8.2.1"
