--- a/Server/package.json
+++ b/Server/package.json
@@ -13,10 +13,12 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^1.6.7",
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
     "express": "^4.18.3",
     "joi": "^17.12.3",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.2.1"
   },
   "devDependencies": {
