--- a/Server/package.json
+++ b/Server/package.json
@@ -18,6 +18,7 @@
     "crypto": "^1.0.1",
     "express": "^4.18.3",
     "joi": "^17.12.3",
+    "js-cookie": "^3.0.5",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.2.1"
   },
